--- a/man/xeyes.man
+++ b/man/xeyes.man
@@ -51,6 +51,12 @@ disables Xrender and draws traditional eyes.
 .TP 8
 .B \-distance
 uses an alternative mapping, as if the eyes were set back from the screen, thus following the mouse more precisely.
+.TP 8
+.B \-help
+print a usage message and exit.
+.TP 8
+.B \-version
+print the version number and exit.
 .SH "SEE ALSO"
 X(__miscmansuffix__), X Toolkit documentation
 .SH AUTHOR
